# TimeTracker

./: .gitignore  CMakeLists.txt  README.md
inc/: logicMainWidget.h  mainwidget.h
src/: logicMainWiget.cpp  main.cpp  mainwidget.cpp
